simple.output
No terminales inútiles en la gramática

   rango
   instruccion_asignacion
   op_asignacion
   definicion_parametro
   cero_uno_identificador
   instruccion_si
   cero_mas_instrucciones
   instruccion_casos
   uno_o_mas_casos
   caso
   entradas
   varias_entradas
   entrada
   cero_mas_expresiones1
   instruccion_bucle
   cero_mas_identificador1
   clausula_iteracion
   cero_o_uno_especificacion_tipo
   cero_o_uno_descendente
   cuando
   expresion_potencia
   expresion_posfija
   operador_posfijo
   expresion_unaria
   primario
   literal
   objeto
   varias_expresiones
   varias_ctc_cadena
   enumeraciones
   varias_clausulas_iteracion
   varias_clave_valor
   varias_campo_valor
   expresion_condicional
   clave_valor
   campo_valor
   expresion
   operadorOR
   operadorAND
   operadorNEG
   operadorASIG
   operadorDES
   operadorSR
   operadorMDM
   operadorPOT
   operadorINCDEC
   operadorUN


Terminales no usados en la gramática

   BUCLE
   CASOS
   CONSTANTE
   CUANDO
   DESCENDENTE
   EN
   ENTONCES
   FALSO
   MIENTRAS
   OBJETO
   OTRO
   PARA
   RANGO
   REPETIR
   SI
   SINO
   TABLA
   VERDADERO
   CTC_CARACTER
   CTC_CADENA
   CTC_ENTERA
   CTC_REAL
   DOS_PTOS
   ASIGNACION
   FLECHA
   INC
   DEC
   DESPI
   DESPD
   LEQ
   CEQ
   NEQ
   AND
   OR
   ASIG_SUMA
   ASIG_RESTA
   ASIG_MULT
   ASIG_DIV
   ASIG_RESTO
   ASIG_POT
   ASIG_DESPI
   ASIG_DESP
   LONGITUD
   TIPO_BASICO
   '^'
   '-'
   '.'
   '['
   ']'
   '{'
   '}'
   '~'
   '<'
   '>'
   '='
   '+'
   '*'
   '/'
   '\\'


Reglas inútiles en la gramática

  136 declaracion_objeto: varios_identificadores ':' CONSTANTE especificacion_tipo ASIGNACION expresion ';'
  137                   | varios_identificadores ':' especificacion_tipo ASIGNACION expresion ';'

  138 cero_o_uno_rango: RANGO rango

  139 rango: expresion DOS_PTOS expresion
  140      | expresion DOS_PTOS expresion DOS_PTOS expresion

  141 tipo_tabla: TABLA '(' expresion DOS_PTOS expresion ')' DE especificacion_tipo

  142 campo: varios_identificadores ':' especificacion_tipo ASIGNACION expresion ';'

  143 cero_uno_expresion: ASIGNACION expresion

  144 instruccion: instruccion_asignacion
  145            | instruccion_si
  146            | instruccion_casos
  147            | instruccion_bucle

  148 instruccion_asignacion: objeto op_asignacion expresion ';'

  149 op_asignacion: ASIGNACION
  150              | ASIG_SUMA
  151              | ASIG_RESTA
  152              | ASIG_MULT
  153              | ASIG_DIV
  154              | ASIG_RESTO
  155              | ASIG_POT
  156              | ASIG_DESPI
  157              | ':'

  158 instruccion_devolver: DEVOLVER expresion ';'

  159 varias_definicion_parametro: definicion_parametro
  160                            | varias_definicion_parametro ',' definicion_parametro

  161 definicion_parametro: cero_uno_identificador expresion

  162 cero_uno_identificador: %empty
  163                       | IDENTIFICADOR ASIGNACION

  164 instruccion_si: SI expresion ENTONCES varias_instrucciones cero_mas_instrucciones FIN SI

  165 cero_mas_instrucciones: %empty
  166                       | SINO varias_instrucciones

  167 instruccion_casos: CASOS expresion ES uno_o_mas_casos FIN CASOS

  168 uno_o_mas_casos: caso
  169                | uno_o_mas_casos caso

  170 caso: CUANDO entradas FLECHA varias_instrucciones

  171 entradas: varias_entradas entrada

  172 varias_entradas: entrada ':'
  173                | varias_entradas entrada ':'

  174 entrada: expresion cero_mas_expresiones1
  175        | OTRO

  176 cero_mas_expresiones1: %empty
  177                      | DOS_PTOS expresion

  178 instruccion_bucle: cero_mas_identificador1 clausula_iteracion varias_instrucciones FIN BUCLE

  179 cero_mas_identificador1: %empty
  180                        | IDENTIFICADOR ':'

  181 clausula_iteracion: PARA IDENTIFICADOR cero_o_uno_especificacion_tipo EN expresion
  182                   | REPETIR IDENTIFICADOR cero_o_uno_especificacion_tipo EN rango cero_o_uno_descendente
  183                   | MIENTRAS expresion

  184 cero_o_uno_especificacion_tipo: %empty
  185                               | ':' especificacion_tipo

  186 cero_o_uno_descendente: %empty
  187                       | DESCENDENTE

  188 cuando: CUANDO expresion

  189 cero_o_uno_cuando: cuando

  190 expresion_potencia: expresion_posfija
  191                   | expresion_posfija '^' expresion_potencia

  192 expresion_posfija: expresion_unaria
  193                  | expresion_unaria operador_posfijo

  194 operador_posfijo: INC
  195                 | DEC

  196 expresion_unaria: primario
  197                 | '-' primario

  198 primario: literal
  199         | objeto
  200         | llamada_subprograma
  201         | OBJETO llamada_subprograma
  202         | enumeraciones
  203         | '(' expresion ')'

  204 literal: VERDADERO
  205        | FALSO
  206        | CTC_ENTERA
  207        | CTC_REAL
  208        | CTC_CARACTER
  209        | CTC_CADENA

  210 objeto: nombre
  211       | objeto '.' IDENTIFICADOR
  212       | objeto '[' varias_expresiones ']'
  213       | objeto '{' varias_ctc_cadena '}'

  214 varias_expresiones: expresion
  215                   | varias_expresiones ',' expresion

  216 varias_ctc_cadena: CTC_CADENA
  217                  | varias_ctc_cadena ',' CTC_CADENA

  218 enumeraciones: '[' expresion_condicional varias_clausulas_iteracion ']'
  219              | '[' varias_expresiones ']'
  220              | '{' varias_clave_valor '}'
  221              | '{' varias_campo_valor '}'

  222 varias_clausulas_iteracion: varias_clausulas_iteracion
  223                           | varias_clausulas_iteracion clausula_iteracion

  224 varias_clave_valor: clave_valor
  225                   | varias_clave_valor ',' clave_valor

  226 varias_campo_valor: campo_valor
  227                   | varias_campo_valor ',' campo_valor

  228 expresion_condicional: expresion
  229                      | SI expresion ENTONCES expresion
  230                      | SI expresion ENTONCES expresion SINO expresion

  231 clave_valor: CTC_CADENA FLECHA expresion

  232 campo_valor: IDENTIFICADOR FLECHA expresion

  233 expresion: operadorOR

  234 operadorOR: operadorOR OR operadorAND
  235           | operadorAND

  236 operadorAND: operadorAND AND operadorNEG
  237            | operadorNEG

  238 operadorNEG: '~' operadorASIG
  239            | operadorASIG

  240 operadorASIG: '<' operadorDES
  241             | '>' operadorDES
  242             | LEQ operadorDES
  243             | FLECHA operadorDES
  244             | '=' operadorDES
  245             | NEQ operadorDES
  246             | operadorDES

  247 operadorDES: operadorDES DESPI operadorSR
  248            | operadorDES DESPD operadorSR
  249            | operadorSR

  250 operadorSR: operadorSR '+' operadorMDM
  251           | operadorSR '-' operadorMDM
  252           | operadorMDM

  253 operadorMDM: operadorMDM '*' operadorPOT
  254            | operadorMDM '/' operadorPOT
  255            | operadorMDM '\\' operadorPOT
  256            | operadorPOT

  257 operadorPOT: operadorINCDEC '^' operadorPOT
  258            | operadorINCDEC

  259 operadorINCDEC: INC operadorMDM
  260               | DEC operadorMDM
  261               | operadorMDM

  262 operadorUN: '-' primario
  263           | primario


La regla es inútil debido a los conflictos

   15 varios_identificadores2: %empty

   97 varias_declaraciones_parametros: %empty

  130 varias_clausula_excepcion_especifica: %empty


Estado 9 conflictos: 2 desplazamiento/reducción
Estado 10 conflictos: 2 desplazamiento/reducción
Estado 18 conflictos: 1 desplazamiento/reducción
Estado 19 conflictos: 1 desplazamiento/reducción
Estado 20 conflictos: 1 desplazamiento/reducción
Estado 46 conflictos: 1 desplazamiento/reducción
Estado 50 conflictos: 1 desplazamiento/reducción
Estado 56 conflictos: 1 desplazamiento/reducción
Estado 57 conflictos: 1 desplazamiento/reducción
Estado 74 conflictos: 1 desplazamiento/reducción
Estado 75 conflictos: 1 desplazamiento/reducción
Estado 80 conflictos: 1 desplazamiento/reducción
Estado 95 conflictos: 1 desplazamiento/reducción
Estado 107 conflictos: 1 desplazamiento/reducción
Estado 108 conflictos: 1 desplazamiento/reducción
Estado 117 conflictos: 2 desplazamiento/reducción
Estado 127 conflictos: 1 desplazamiento/reducción
Estado 149 conflictos: 1 desplazamiento/reducción
Estado 162 conflictos: 1 desplazamiento/reducción
Estado 165 conflictos: 1 desplazamiento/reducción
Estado 172 conflictos: 1 desplazamiento/reducción
Estado 176 conflictos: 1 desplazamiento/reducción
Estado 177 conflictos: 1 desplazamiento/reducción
Estado 180 conflictos: 1 desplazamiento/reducción
Estado 212 conflictos: 1 desplazamiento/reducción
Estado 222 conflictos: 1 desplazamiento/reducción
Estado 226 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: definicion_programa
    2         | definicion_libreria

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' codigo_programa

    4 codigo_programa: varias_librerias cuerpo_subprograma

    5 varias_librerias: %empty
    6                 | libreria
    7                 | varias_librerias libreria

    8 libreria: IMPORTAR LIBRERIA nombre ';'
    9         | DE LIBRERIA nombre IMPORTAR varios_identificadores ';'
   10         | IMPORTAR LIBRERIA nombre COMO IDENTIFICADOR ';'

   11 varios_identificadores: IDENTIFICADOR
   12                       | varios_identificadores ',' IDENTIFICADOR

   13 nombre: IDENTIFICADOR
   14       | varios_identificadores2 IDENTIFICADOR

   15 varios_identificadores2: %empty
   16                        | varios_identificadores2 IDENTIFICADOR CUATRO_PUNTOS

   17 definicion_libreria: LIBRERIA IDENTIFICADOR ';' codigo_libreria

   18 codigo_libreria: varias_librerias varias_declaraciones
   19                | varias_librerias exportaciones varias_declaraciones

   20 varias_declaraciones: declaracion
   21                     | varias_declaraciones declaracion

   22 exportaciones: EXPORTAR varios_nombres ';'

   23 varios_nombres: nombre
   24               | varios_nombres ',' nombre

   25 declaracion: declaracion_objeto
   26            | declaracion_tipo
   27            | declaracion_subprograma

   28 declaracion_objeto: varios_identificadores ':' especificacion_tipo ';'

   29 especificacion_tipo: nombre
   30                    | tipo_no_estructurado

   31 declaracion_tipo: TIPO IDENTIFICADOR ES tipo_no_estructurado ';'
   32                 | TIPO IDENTIFICADOR ES tipo_estructurado

   33 tipo_no_estructurado: tipo_escalar
   34                     | tipo_tabla
   35                     | tipo_diccionario

   36 tipo_escalar: cero_o_uno_signo tipo_basico cero_o_uno_longitud cero_o_uno_rango

   37 cero_o_uno_signo: %empty
   38                 | SIGNO

   39 cero_o_uno_longitud: %empty
   40                    | longitud

   41 cero_o_uno_rango: %empty

   42 longitud: CORTO
   43         | LARGO

   44 tipo_basico: BOOLEANO
   45            | CARACTER
   46            | ENTERO
   47            | REAL

   48 tipo_tabla: LISTA DE especificacion_tipo

   49 tipo_diccionario: DICCIONARIO DE especificacion_tipo

   50 tipo_estructurado: tipo_registro
   51                  | tipo_enumerado
   52                  | clase

   53 tipo_registro: REGISTRO varios_campos FIN REGISTRO

   54 varios_campos: campo
   55              | varios_campos campo

   56 campo: varios_identificadores ':' especificacion_tipo ';'

   57 tipo_enumerado: ENUMERACION varios_elemento_enumeracion FIN ENUMERACION
   58               | ENUMERACION DE tipo_escalar varios_elemento_enumeracion FIN ENUMERACION

   59 varios_elemento_enumeracion: elemento_enumeracion
   60                            | varios_elemento_enumeracion ',' elemento_enumeracion

   61 elemento_enumeracion: IDENTIFICADOR cero_uno_expresion

   62 cero_uno_expresion: %empty

   63 clase: CLASE cero_uno_ultima cero_uno_superclases varias_declaraciones_componente FIN CLASE

   64 cero_uno_ultima: %empty
   65                | ULTIMA

   66 cero_uno_superclases: %empty
   67                     | superclases

   68 superclases: '(' varios_nombres ')'

   69 declaracion_componente: componente
   70                       | visibilidad componente

   71 varias_declaraciones_componente: declaracion_componente
   72                                | varias_declaraciones_componente declaracion_componente

   73 visibilidad: PUBLICO
   74            | PROTEGIDO
   75            | PRIVADO

   76 componente: declaracion_tipo
   77           | declaracion_objeto
   78           | varios_modificadores declaracion_subprograma

   79 varios_modificadores: %empty
   80                     | modificador
   81                     | varios_modificadores ',' modificador

   82 modificador: CONSTRUCTOR
   83            | DESTRUCTOR
   84            | GENERICO
   85            | ABSTRACTO
   86            | ESPECIFICO
   87            | FINAL

   88 declaracion_subprograma: SUBPROGRAMA cabecera_subprograma cuerpo_subprograma SUBPROGRAMA

   89 cabecera_subprograma: IDENTIFICADOR cero_uno_parametrizacion cero_uno_tipoResultado

   90 cero_uno_parametrizacion: %empty
   91                         | parametrizacion

   92 cero_uno_tipoResultado: %empty
   93                       | tipo_resultado

   94 parametrizacion: '(' varias_declaraciones_parametros declaracion_parametros ')'

   95 declaracion_parametros: varios_identificadores ':' especificacion_tipo cero_uno_expresion
   96                       | varios_identificadores ':' modo especificacion_tipo cero_uno_expresion

   97 varias_declaraciones_parametros: %empty
   98                                | declaracion_parametros ';'
   99                                | varias_declaraciones_parametros declaracion_parametros ';'

  100 modo: VALOR
  101     | REFERENCIA

  102 tipo_resultado: DEVOLVER especificacion_tipo

  103 cuerpo_subprograma: cero_o_mas_declaraciones PRINCIPIO varias_instrucciones FIN

  104 cero_o_mas_declaraciones: %empty
  105                         | declaracion
  106                         | varias_declaraciones declaracion

  107 varias_instrucciones: instruccion
  108                     | varias_instrucciones instruccion

  109 instruccion: instruccion_devolver
  110            | instruccion_llamada
  111            | instruccion_interrupcion
  112            | instruccion_lanzamiento_excepcion
  113            | instruccion_captura_excepcion
  114            | ';'

  115 instruccion_devolver: DEVOLVER ';'

  116 instruccion_llamada: llamada_subprograma ';'

  117 llamada_subprograma: nombre '(' varias_definicion_parametro ')'

  118 varias_definicion_parametro: %empty

  119 instruccion_interrupcion: SIGUIENTE cero_o_uno_cuando ';'
  120                         | SALIR cero_o_uno_de_identificador cero_o_uno_cuando ';'

  121 cero_o_uno_cuando: %empty

  122 cero_o_uno_de_identificador: %empty
  123                            | DE IDENTIFICADOR

  124 instruccion_lanzamiento_excepcion: LANZA nombre ';'

  125 instruccion_captura_excepcion: PRUEBA varias_instrucciones clausulas FIN PRUEBA

  126 clausulas: clausulas_excepcion
  127          | clausulas_excepcion clausula_finalmente
  128          | clausula_finalmente

  129 clausulas_excepcion: varias_clausula_excepcion_especifica clausula_excepcion_general

  130 varias_clausula_excepcion_especifica: %empty
  131                                     | clausula_excepcion_especifica
  132                                     | varias_clausula_excepcion_especifica clausula_excepcion_especifica

  133 clausula_excepcion_especifica: EXCEPCION '(' nombre ')' varias_instrucciones

  134 clausula_excepcion_general: EXCEPCION varias_instrucciones

  135 clausula_finalmente: FINALMENTE varias_instrucciones


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 68 94 117 133
')' (41) 68 94 117 133
'*' (42)
'+' (43)
',' (44) 12 24 60 81
'-' (45)
'.' (46)
'/' (47)
':' (58) 28 56 95 96
';' (59) 3 8 9 10 17 22 28 31 56 98 99 114 115 116 119 120 124
'<' (60)
'=' (61)
'>' (62)
'[' (91)
'\\' (92)
']' (93)
'^' (94)
'{' (123)
'}' (125)
'~' (126)
error (256)
ABSTRACTO (258) 85
BOOLEANO (259) 44
BUCLE (260)
CARACTER (261) 45
CASOS (262)
CLASE (263) 63
COMO (264) 10
CONSTANTE (265)
CONSTRUCTOR (266) 82
CORTO (267) 42
CUANDO (268)
DE (269) 9 48 49 58 123
DESCENDENTE (270)
DESTRUCTOR (271) 83
DEVOLVER (272) 102 115
DICCIONARIO (273) 49
EN (274)
ENTERO (275) 46
ENTONCES (276)
ENUMERACION (277) 57 58
ES (278) 31 32
ESPECIFICO (279) 86
EXCEPCION (280) 133 134
EXPORTAR (281) 22
FALSO (282)
FIN (283) 53 57 58 63 103 125
FINAL (284) 87
FINALMENTE (285) 135
GENERICO (286) 84
IMPORTAR (287) 8 9 10
LARGO (288) 43
LANZA (289) 124
LIBRERIA (290) 8 9 10 17
LISTA (291) 48
MIENTRAS (292)
OBJETO (293)
OTRO (294)
PARA (295)
PRINCIPIO (296) 103
PRIVADO (297) 75
PROGRAMA (298) 3
PROTEGIDO (299) 74
PRUEBA (300) 125
PUBLICO (301) 73
RANGO (302)
REAL (303) 47
REFERENCIA (304) 101
REGISTRO (305) 53
REPETIR (306)
SALIR (307) 120
SI (308)
SIGNO (309) 38
SIGUIENTE (310) 119
SINO (311)
SUBPROGRAMA (312) 88
TABLA (313)
TIPO (314) 31 32
ULTIMA (315) 65
VALOR (316) 100
VERDADERO (317)
CTC_CARACTER (318)
CTC_CADENA (319)
IDENTIFICADOR (320) 3 10 11 12 13 14 16 17 31 32 61 89 123
CTC_ENTERA (321)
CTC_REAL (322)
DOS_PTOS (323)
CUATRO_PUNTOS (324) 16
ASIGNACION (325)
FLECHA (326)
INC (327)
DEC (328)
DESPI (329)
DESPD (330)
LEQ (331)
CEQ (332)
NEQ (333)
AND (334)
OR (335)
ASIG_SUMA (336)
ASIG_RESTA (337)
ASIG_MULT (338)
ASIG_DIV (339)
ASIG_RESTO (340)
ASIG_POT (341)
ASIG_DESPI (342)
ASIG_DESP (343)
LONGITUD (344)
TIPO_BASICO (345)


No terminales con las reglas donde aparecen

$accept (111)
    en la izquierda: 0
programa (112)
    en la izquierda: 1 2, en la derecha: 0
definicion_programa (113)
    en la izquierda: 3, en la derecha: 1
codigo_programa (114)
    en la izquierda: 4, en la derecha: 3
varias_librerias (115)
    en la izquierda: 5 6 7, en la derecha: 4 7 18 19
libreria (116)
    en la izquierda: 8 9 10, en la derecha: 6 7
varios_identificadores (117)
    en la izquierda: 11 12, en la derecha: 9 12 28 56 95 96
nombre (118)
    en la izquierda: 13 14, en la derecha: 8 9 10 23 24 29 117 124
    133
varios_identificadores2 (119)
    en la izquierda: 15 16, en la derecha: 14 16
definicion_libreria (120)
    en la izquierda: 17, en la derecha: 2
codigo_libreria (121)
    en la izquierda: 18 19, en la derecha: 17
varias_declaraciones (122)
    en la izquierda: 20 21, en la derecha: 18 19 21 106
exportaciones (123)
    en la izquierda: 22, en la derecha: 19
varios_nombres (124)
    en la izquierda: 23 24, en la derecha: 22 24 68
declaracion (125)
    en la izquierda: 25 26 27, en la derecha: 20 21 105 106
declaracion_objeto (126)
    en la izquierda: 28, en la derecha: 25 77
especificacion_tipo (127)
    en la izquierda: 29 30, en la derecha: 28 48 49 56 95 96 102
declaracion_tipo (128)
    en la izquierda: 31 32, en la derecha: 26 76
tipo_no_estructurado (129)
    en la izquierda: 33 34 35, en la derecha: 30 31
tipo_escalar (130)
    en la izquierda: 36, en la derecha: 33 58
cero_o_uno_signo (131)
    en la izquierda: 37 38, en la derecha: 36
cero_o_uno_longitud (132)
    en la izquierda: 39 40, en la derecha: 36
cero_o_uno_rango (133)
    en la izquierda: 41, en la derecha: 36
longitud (134)
    en la izquierda: 42 43, en la derecha: 40
tipo_basico (135)
    en la izquierda: 44 45 46 47, en la derecha: 36
tipo_tabla (136)
    en la izquierda: 48, en la derecha: 34
tipo_diccionario (137)
    en la izquierda: 49, en la derecha: 35
tipo_estructurado (138)
    en la izquierda: 50 51 52, en la derecha: 32
tipo_registro (139)
    en la izquierda: 53, en la derecha: 50
varios_campos (140)
    en la izquierda: 54 55, en la derecha: 53 55
campo (141)
    en la izquierda: 56, en la derecha: 54 55
tipo_enumerado (142)
    en la izquierda: 57 58, en la derecha: 51
varios_elemento_enumeracion (143)
    en la izquierda: 59 60, en la derecha: 57 58 60
elemento_enumeracion (144)
    en la izquierda: 61, en la derecha: 59 60
cero_uno_expresion (145)
    en la izquierda: 62, en la derecha: 61 95 96
clase (146)
    en la izquierda: 63, en la derecha: 52
cero_uno_ultima (147)
    en la izquierda: 64 65, en la derecha: 63
cero_uno_superclases (148)
    en la izquierda: 66 67, en la derecha: 63
superclases (149)
    en la izquierda: 68, en la derecha: 67
declaracion_componente (150)
    en la izquierda: 69 70, en la derecha: 71 72
varias_declaraciones_componente (151)
    en la izquierda: 71 72, en la derecha: 63 72
visibilidad (152)
    en la izquierda: 73 74 75, en la derecha: 70
componente (153)
    en la izquierda: 76 77 78, en la derecha: 69 70
varios_modificadores (154)
    en la izquierda: 79 80 81, en la derecha: 78 81
modificador (155)
    en la izquierda: 82 83 84 85 86 87, en la derecha: 80 81
declaracion_subprograma (156)
    en la izquierda: 88, en la derecha: 27 78
cabecera_subprograma (157)
    en la izquierda: 89, en la derecha: 88
cero_uno_parametrizacion (158)
    en la izquierda: 90 91, en la derecha: 89
cero_uno_tipoResultado (159)
    en la izquierda: 92 93, en la derecha: 89
parametrizacion (160)
    en la izquierda: 94, en la derecha: 91
declaracion_parametros (161)
    en la izquierda: 95 96, en la derecha: 94 98 99
varias_declaraciones_parametros (162)
    en la izquierda: 97 98 99, en la derecha: 94 99
modo (163)
    en la izquierda: 100 101, en la derecha: 96
tipo_resultado (164)
    en la izquierda: 102, en la derecha: 93
cuerpo_subprograma (165)
    en la izquierda: 103, en la derecha: 4 88
cero_o_mas_declaraciones (166)
    en la izquierda: 104 105 106, en la derecha: 103
varias_instrucciones (167)
    en la izquierda: 107 108, en la derecha: 103 108 125 133 134 135
instruccion (168)
    en la izquierda: 109 110 111 112 113 114, en la derecha: 107 108
instruccion_devolver (169)
    en la izquierda: 115, en la derecha: 109
instruccion_llamada (170)
    en la izquierda: 116, en la derecha: 110
llamada_subprograma (171)
    en la izquierda: 117, en la derecha: 116
varias_definicion_parametro (172)
    en la izquierda: 118, en la derecha: 117
instruccion_interrupcion (173)
    en la izquierda: 119 120, en la derecha: 111
cero_o_uno_cuando (174)
    en la izquierda: 121, en la derecha: 119 120
cero_o_uno_de_identificador (175)
    en la izquierda: 122 123, en la derecha: 120
instruccion_lanzamiento_excepcion (176)
    en la izquierda: 124, en la derecha: 112
instruccion_captura_excepcion (177)
    en la izquierda: 125, en la derecha: 113
clausulas (178)
    en la izquierda: 126 127 128, en la derecha: 125
clausulas_excepcion (179)
    en la izquierda: 129, en la derecha: 126 127
varias_clausula_excepcion_especifica (180)
    en la izquierda: 130 131 132, en la derecha: 129 132
clausula_excepcion_especifica (181)
    en la izquierda: 133, en la derecha: 131 132
clausula_excepcion_general (182)
    en la izquierda: 134, en la derecha: 129
clausula_finalmente (183)
    en la izquierda: 135, en la derecha: 127 128


Estado 0

    0 $accept: . programa $end

    LIBRERIA  desplazar e ir al estado 1
    PROGRAMA  desplazar e ir al estado 2

    programa             ir al estado 3
    definicion_programa  ir al estado 4
    definicion_libreria  ir al estado 5


Estado 1

   17 definicion_libreria: LIBRERIA . IDENTIFICADOR ';' codigo_libreria

    IDENTIFICADOR  desplazar e ir al estado 6


Estado 2

    3 definicion_programa: PROGRAMA . IDENTIFICADOR ';' codigo_programa

    IDENTIFICADOR  desplazar e ir al estado 7


Estado 3

    0 $accept: programa . $end

    $end  desplazar e ir al estado 8


Estado 4

    1 programa: definicion_programa .

    $default  reduce usando la regla 1 (programa)


Estado 5

    2 programa: definicion_libreria .

    $default  reduce usando la regla 2 (programa)


Estado 6

   17 definicion_libreria: LIBRERIA IDENTIFICADOR . ';' codigo_libreria

    ';'  desplazar e ir al estado 9


Estado 7

    3 definicion_programa: PROGRAMA IDENTIFICADOR . ';' codigo_programa

    ';'  desplazar e ir al estado 10


Estado 8

    0 $accept: programa $end .

    $default  aceptar


Estado 9

   17 definicion_libreria: LIBRERIA IDENTIFICADOR ';' . codigo_libreria

    DE        desplazar e ir al estado 11
    IMPORTAR  desplazar e ir al estado 12

    DE        [reduce usando la regla 5 (varias_librerias)]
    IMPORTAR  [reduce usando la regla 5 (varias_librerias)]
    $default  reduce usando la regla 5 (varias_librerias)

    varias_librerias  ir al estado 13
    libreria          ir al estado 14
    codigo_libreria   ir al estado 15


Estado 10

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' . codigo_programa

    DE        desplazar e ir al estado 11
    IMPORTAR  desplazar e ir al estado 12

    DE        [reduce usando la regla 5 (varias_librerias)]
    IMPORTAR  [reduce usando la regla 5 (varias_librerias)]
    $default  reduce usando la regla 5 (varias_librerias)

    codigo_programa   ir al estado 16
    varias_librerias  ir al estado 17
    libreria          ir al estado 14


Estado 11

    9 libreria: DE . LIBRERIA nombre IMPORTAR varios_identificadores ';'

    LIBRERIA  desplazar e ir al estado 18


Estado 12

    8 libreria: IMPORTAR . LIBRERIA nombre ';'
   10         | IMPORTAR . LIBRERIA nombre COMO IDENTIFICADOR ';'

    LIBRERIA  desplazar e ir al estado 19


Estado 13

    7 varias_librerias: varias_librerias . libreria
   18 codigo_libreria: varias_librerias . varias_declaraciones
   19                | varias_librerias . exportaciones varias_declaraciones

    DE             desplazar e ir al estado 11
    EXPORTAR       desplazar e ir al estado 20
    IMPORTAR       desplazar e ir al estado 12
    SUBPROGRAMA    desplazar e ir al estado 21
    TIPO           desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 23

    libreria                 ir al estado 24
    varios_identificadores   ir al estado 25
    varias_declaraciones     ir al estado 26
    exportaciones            ir al estado 27
    declaracion              ir al estado 28
    declaracion_objeto       ir al estado 29
    declaracion_tipo         ir al estado 30
    declaracion_subprograma  ir al estado 31


Estado 14

    6 varias_librerias: libreria .

    $default  reduce usando la regla 6 (varias_librerias)


Estado 15

   17 definicion_libreria: LIBRERIA IDENTIFICADOR ';' codigo_libreria .

    $default  reduce usando la regla 17 (definicion_libreria)


Estado 16

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' codigo_programa .

    $default  reduce usando la regla 3 (definicion_programa)


Estado 17

    4 codigo_programa: varias_librerias . cuerpo_subprograma
    7 varias_librerias: varias_librerias . libreria

    DE             desplazar e ir al estado 11
    IMPORTAR       desplazar e ir al estado 12
    SUBPROGRAMA    desplazar e ir al estado 21
    TIPO           desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 23

    $default  reduce usando la regla 104 (cero_o_mas_declaraciones)

    libreria                  ir al estado 24
    varios_identificadores    ir al estado 25
    varias_declaraciones      ir al estado 32
    declaracion               ir al estado 33
    declaracion_objeto        ir al estado 29
    declaracion_tipo          ir al estado 30
    declaracion_subprograma   ir al estado 31
    cuerpo_subprograma        ir al estado 34
    cero_o_mas_declaraciones  ir al estado 35


Estado 18

    9 libreria: DE LIBRERIA . nombre IMPORTAR varios_identificadores ';'

    IDENTIFICADOR  desplazar e ir al estado 36

    IDENTIFICADOR  [reduce usando la regla 15 (varios_identificadores2)]

    nombre                   ir al estado 37
    varios_identificadores2  ir al estado 38


Estado 19

    8 libreria: IMPORTAR LIBRERIA . nombre ';'
   10         | IMPORTAR LIBRERIA . nombre COMO IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 36

    IDENTIFICADOR  [reduce usando la regla 15 (varios_identificadores2)]

    nombre                   ir al estado 39
    varios_identificadores2  ir al estado 38


Estado 20

   22 exportaciones: EXPORTAR . varios_nombres ';'

    IDENTIFICADOR  desplazar e ir al estado 36

    IDENTIFICADOR  [reduce usando la regla 15 (varios_identificadores2)]

    nombre                   ir al estado 40
    varios_identificadores2  ir al estado 38
    varios_nombres           ir al estado 41


Estado 21

   88 declaracion_subprograma: SUBPROGRAMA . cabecera_subprograma cuerpo_subprograma SUBPROGRAMA

    IDENTIFICADOR  desplazar e ir al estado 42

    cabecera_subprograma  ir al estado 43


Estado 22

   31 declaracion_tipo: TIPO . IDENTIFICADOR ES tipo_no_estructurado ';'
   32                 | TIPO . IDENTIFICADOR ES tipo_estructurado

    IDENTIFICADOR  desplazar e ir al estado 44


Estado 23

   11 varios_identificadores: IDENTIFICADOR .

    $default  reduce usando la regla 11 (varios_identificadores)


Estado 24

    7 varias_librerias: varias_librerias libreria .

    $default  reduce usando la regla 7 (varias_librerias)


Estado 25

   12 varios_identificadores: varios_identificadores . ',' IDENTIFICADOR
   28 declaracion_objeto: varios_identificadores . ':' especificacion_tipo ';'

    ','  desplazar e ir al estado 45
    ':'  desplazar e ir al estado 46


Estado 26

   18 codigo_libreria: varias_librerias varias_declaraciones .
   21 varias_declaraciones: varias_declaraciones . declaracion

    SUBPROGRAMA    desplazar e ir al estado 21
    TIPO           desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 23

    $default  reduce usando la regla 18 (codigo_libreria)

    varios_identificadores   ir al estado 25
    declaracion              ir al estado 47
    declaracion_objeto       ir al estado 29
    declaracion_tipo         ir al estado 30
    declaracion_subprograma  ir al estado 31


Estado 27

   19 codigo_libreria: varias_librerias exportaciones . varias_declaraciones

    SUBPROGRAMA    desplazar e ir al estado 21
    TIPO           desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 23

    varios_identificadores   ir al estado 25
    varias_declaraciones     ir al estado 48
    declaracion              ir al estado 28
    declaracion_objeto       ir al estado 29
    declaracion_tipo         ir al estado 30
    declaracion_subprograma  ir al estado 31


Estado 28

   20 varias_declaraciones: declaracion .

    $default  reduce usando la regla 20 (varias_declaraciones)


Estado 29

   25 declaracion: declaracion_objeto .

    $default  reduce usando la regla 25 (declaracion)


Estado 30

   26 declaracion: declaracion_tipo .

    $default  reduce usando la regla 26 (declaracion)


Estado 31

   27 declaracion: declaracion_subprograma .

    $default  reduce usando la regla 27 (declaracion)


Estado 32

   21 varias_declaraciones: varias_declaraciones . declaracion
  106 cero_o_mas_declaraciones: varias_declaraciones . declaracion

    SUBPROGRAMA    desplazar e ir al estado 21
    TIPO           desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 23

    varios_identificadores   ir al estado 25
    declaracion              ir al estado 49
    declaracion_objeto       ir al estado 29
    declaracion_tipo         ir al estado 30
    declaracion_subprograma  ir al estado 31


Estado 33

   20 varias_declaraciones: declaracion .
  105 cero_o_mas_declaraciones: declaracion .

    PRINCIPIO  reduce usando la regla 105 (cero_o_mas_declaraciones)
    $default   reduce usando la regla 20 (varias_declaraciones)


Estado 34

    4 codigo_programa: varias_librerias cuerpo_subprograma .

    $default  reduce usando la regla 4 (codigo_programa)


Estado 35

  103 cuerpo_subprograma: cero_o_mas_declaraciones . PRINCIPIO varias_instrucciones FIN

    PRINCIPIO  desplazar e ir al estado 50


Estado 36

   13 nombre: IDENTIFICADOR .
